# ezmsg-lsl

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish-ezmsg-lsl.yml  python-tests.yml
ezmsg/lsl/: __init__.py  units.py
src/ezmsg/lsl/: __init__.py  units.py
