[metadata]
name = ezmsg-lsl
version = attr: ezmsg.lsl.__version__
author = Chadwick Boulay
author_email = chad@cbneurotech.com
description = LabStreamingLayer (LSL) interface for ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/labstreaminglayer/ezmsg-lsl
license_files = LICENSE
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    pylsl
    ezmsg>=2.1.0
    numpy

[options.extras_require]
test =
    pytest
    pytest-cov
